implement YELP API

--- a/pet-491b/server/.env
+++ b/pet-491b/server/.env
@@ -4,10 +4,17 @@ JWTPRIVATEKEY = "abcdef"
 
 BASE_URL = http://localhost:3001/
 HOST = smtp.office365.com
+# HOST = smtp.mail.yahoo.com
+
 EMAIL_PORT = 587
 # SECURE = false
 USER = petadoptionmatch@outlook.com
+# USER = petadoptionmatch@yahoo.com
+
 PASS = Leoyuki100598
 
 PETFINDER_API_KEY= "2yks4X0mp4tbByGlt0hLYC8fOeHHdrR7ErjdgqRE3tI6iRNeDm"
 PETFINDER_API_SECRET= "q6WrO78cNHPuJQ4kQ0HRsX7ceg0BUUKHwyTrJlhy"
+
+YELP_API_KEY = "AnT63ny_O9oYz1UNA2GZZ31Swo61LmYFbNXiywqjyhOfbTK750o_VNYP3uIH4EVmuuWJQzpn93NbmYDfDyIbsi0-5FANgORZ8CmyLNmda69gQ2WYPXrKkn3hjyTgZXYx"
+
