--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 **/.DS_Store
 node_modules/
+Pet-Adoption-Matching/pet-491b/client/node_modules/
+Pet-Adoption-Matching/pet-491b/server/node_modules/
