--- a/pet-491b/server/package.json
+++ b/pet-491b/server/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -21,6 +23,7 @@
     "mongoose": "^6.12.6",
     "nodemailer": "^6.9.9",
     "nodemon": "^2.0.22",
-    "petfinder": "^0.1.1"
+    "petfinder": "^0.1.1",
+    "react-router-dom": "^6.23.1"
   }
 }
