--- a/pet-491b/server/package.json
+++ b/pet-491b/server/package.json
@@ -11,15 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.18.2",
-    "joi": "^17.12.1",
+    "express": "^4.19.2",
+    "joi": "^17.13.1",
     "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.12.6",
-    "nodemailer": "^6.9.9",
+    "mongoose": "^6.12.8",
+    "nodemailer": "^6.9.13",
     "nodemon": "^2.0.22",
     "petfinder": "^0.1.1"
   }
