--- a/pet-491b/server/.env
+++ b/pet-491b/server/.env
@@ -8,10 +8,10 @@ HOST = smtp.office365.com
 
 EMAIL_PORT = 587
 # SECURE = false
-USER = petadoptionmatch@outlook.com
+USER = "petadoptionmatch@outlook.com"
 # USER = petadoptionmatch@yahoo.com
 
-PASS = Leoyuki100598
+PASS = "Leoyuki100598"
 
 PETFINDER_API_KEY= "2yks4X0mp4tbByGlt0hLYC8fOeHHdrR7ErjdgqRE3tI6iRNeDm"
 PETFINDER_API_SECRET= "q6WrO78cNHPuJQ4kQ0HRsX7ceg0BUUKHwyTrJlhy"
