--- a/pet-491b/server/.env
+++ b/pet-491b/server/.env
@@ -2,7 +2,7 @@ DB = "mongodb+srv://admin:1234@pet-adoption.eekmuf4.mongodb.net/accounts?retryWr
 SALT = 10
 JWTPRIVATEKEY = "abcdef"
 
-BASE_URL = http://localhost:3000/
+BASE_URL = https://pet-adoption-matching-frontend.onrender.com/
 HOST = smtp.office365.com
 # HOST = smtp.mail.yahoo.com
 
